# ResolveOps-

./: README.md  main.py  pyproject.toml  requirements.txt
agents/: investigation_agent.py  jira_update_agent.py  rag_retrieval_agent.py  reflection_agent.py  root_cause_agent.py  slack_notification_agent.py  solution_agent.py  ticket_classifier_agent.py
chroma_db/: chroma.sqlite3
evaluation/: dataset.py  evaluators.py  run_eval.py
graphs/: nodes.py  workflow.py
middleware/: guardrails.py  input_middleware.py  output_middleware.py  pii_middleware.py
prompts/: classifier_prompt.py  investigation_prompt.py  reflection_prompt.py  retrieval_prompt.py  rootcause_prompt.py  solution_prompt.py
rag/: embeddings.py  ingest.py  retriever.py  vectordb.py
schemas/: solution_schema.py  state_schema.py  ticket_schema.py
tools/: confluence_tool.py  github_tool.py  investigation_tools.py  jira_tool.py  litellm_router.py  llm_router.py  slack_tool.py
