[project]
name = "resolveops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "deepagents>=0.6.12",
    "huggingface-hub>=1.21.0",
    "langchain-chroma>=1.1.0",
    "langchain-google-genai>=4.2.6",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-mistralai>=1.1.5",
    "pydantic>=2.13.4",
    "pygithub>=2.9.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
]
